Parte de vendas iniciada

--- a/view/inicial.html
+++ b/view/inicial.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col m4">
-                    <div class="card">
+                    <a href="view/venda.html"><div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="../images/funcionario.jpeg">
                         </div>
@@ -51,7 +51,7 @@
                             <span class="card-title activator grey-text text-darken-4">Vendas</span>
                             <p>Clique aqui para gerenciar as vendas e visualizar o caixa</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
         </div>
     </div>
