--- a/view/inicial.html
+++ b/view/inicial.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col m4">
-                <a href="view/servico.html">
+                <a href="servico.html">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="../images/servico.jpeg">
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col m4">
-                <a href="view/cliente.html"><div class="card">
+                <a href="cliente.html"><div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="../images/cliente.jpeg">
                     </div>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col m4">
-                    <a href="view/venda.html"><div class="card">
+                    <a href="venda.html"><div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="../images/funcionario.jpeg">
                         </div>
